# ax

./: .editorconfig  .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.cargo/: config.toml
.cursor/rules/: ax-codegraph-parity.mdc  no-mojibake.mdc  release-all-platforms.mdc
.cursor/skills/ax-reinstall/: SKILL.md
.github/workflows/: deploy-site.yml  deploy-telemetry.yml  release.yml
crates/ax-cli/: Cargo.toml
crates/ax-cli/src/: glyphs.rs  help_text.rs  main.rs  version_check.rs
crates/ax-cli/src/commands/: affected.rs  callees.rs  callers.rs  context.rs  daemon.rs  explore.rs  files.rs  impact.rs  index.rs  init.rs  install.rs  mod.rs  node.rs  offload.rs  policy.rs  prompt_hook.rs  query.rs  status.rs  sync.rs  telemetry.rs  uninit.rs  uninstall.rs  unlock.rs  upgrade.rs  web.rs
crates/ax-cli/src/installer/: mod.rs  report.rs  targets.rs
crates/ax-cli/src/ui/: glyphs.rs  install_log.rs  mod.rs  progress.rs  spinner.rs  style.rs  terminal.rs  update_notice.rs
crates/ax-context/: Cargo.toml
crates/ax-context/src/: builder.rs  directory.rs  explore.rs  explore_format.rs  formatter.rs  lib.rs  markers.rs
crates/ax-core/: Cargo.toml
crates/ax-core/src/: lib.rs  project_config.rs
crates/ax-db/: Cargo.toml
crates/ax-db/src/: lib.rs  migrations.rs  queries.rs  schema.rs  schema.sql
crates/ax-extraction/: Cargo.toml
crates/ax-extraction/src/: extraction_version.rs  function_ref.rs  generated_detection.rs  grammars.rs  lib.rs  orchestrator.rs  parse_pool.rs
crates/ax-extraction/src/languages/: common.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  refs.rs  rust.rs  typescript.rs
crates/ax-graph/: Cargo.toml
crates/ax-graph/src/: lib.rs  petgraph_analysis.rs  queries.rs  query_parser.rs  query_utils.rs  traversal.rs
crates/ax-mcp/: Cargo.toml
crates/ax-mcp/src/: daemon.rs  daemon_conn.rs  daemon_lock.rs  daemon_paths.rs  engine.rs  lib.rs  liveness_watchdog.rs  ppid_watchdog.rs  proxy.rs  query_pool.rs  server.rs  tools.rs  transport.rs
crates/ax-policy/: Cargo.toml
crates/ax-policy/src/: config.rs  format.rs  guard.rs  index.rs  lib.rs  matcher.rs  parse.rs  paths.rs  seed.rs  store.rs  types.rs
crates/ax-policy/templates/rules/: agent-workflow.mdc  codegraph-parity.mdc  english-only.mdc  release-all-platforms.mdc  subagents.mdc  utf8-no-bom.mdc
crates/ax-policy/templates/skills/startup/: SKILL.md
crates/ax-policy/templates/skills/subagents/: SKILL.md
crates/ax-reasoning/: Cargo.toml
crates/ax-reasoning/src/: config.rs  lib.rs  reasoner.rs
crates/ax-resolution/: Cargo.toml
crates/ax-resolution/src/: c_fnptr_synthesizer.rs  callback_synthesizer.rs  framework_resolve.rs  import_resolver.rs  lib.rs  name_matcher.rs  resolver.rs  strip_comments.rs  types.rs
crates/ax-resolution/src/frameworks/: angular.rs  cargo_workspace.rs  django.rs  express.rs  extract.rs  flask.rs  go.rs  laravel.rs  mod.rs  nestjs.rs  react.rs  rust.rs  spring.rs  svelte.rs  vue.rs
crates/ax-smoke-tests/: Cargo.toml
crates/ax-smoke-tests/tests/: smoke.rs
crates/ax-sync/: Cargo.toml
crates/ax-sync/src/: git_hooks.rs  lib.rs  watch_policy.rs  watcher.rs  worktree.rs
crates/ax-telemetry/: Cargo.toml
crates/ax-telemetry/src/: lib.rs
crates/ax-types/: Cargo.toml
crates/ax-types/src/: lib.rs
crates/ax-utils/: Cargo.toml
crates/ax-utils/src/: debounce.rs  errors.rs  file_lock.rs  lib.rs  logger.rs  memory.rs  mutex.rs  paths.rs  process.rs  security.rs  text_encoding.rs
crates/ax-web/: Cargo.toml  build.rs
crates/ax-web/src/: lib.rs  policy.rs  queries.rs
crates/ax-web/web-ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/ax-web/web-ui/src/: App.tsx  api.ts  index.css  main.tsx  policyApi.ts  policyTypes.ts  types.ts
crates/ax-web/web-ui/src/components/: MarkdownEditor.tsx  NavIcons.tsx  NodeDetail.tsx  StatusBar.tsx
crates/ax-web/web-ui/src/context/: UiContext.tsx
crates/ax-web/web-ui/src/pages/: Files.tsx  Nodes.tsx  PolicyMatch.tsx  PolicyRuleEditor.tsx  PolicyRules.tsx  PolicySkillEditor.tsx  PolicySkills.tsx  Search.tsx  Stats.tsx
docs/: CODEGRAPH_AX_COMPARE_MATRIX.md  POLICY_ENGINE.md  POLICY_ENGINE_PLAN.md  PRODUCTION.md  TELEMETRY.md
docs/npm/: PUBLISH.md  README.md
scripts/: bootstrap-ops.ps1  build.ps1  deploy-netlify.ps1  deploy-telemetry.ps1  enable-github-pages.ps1  npm-shim.js  pack-npm.ps1  pack-npm.sh  package-release.ps1  package-release.sh  publish-getax-releases.ps1  publish-getax-releases.sh  publish-release.ps1  reinstall-cli.ps1  reinstall-cli.sh  release-local.ps1  release-tag.ps1  rewrite-commit-dates.sh  sync-npm-docs.js  verify-release-assets.ps1  verify-release-assets.sh
site/: README.md  astro.config.mjs  netlify.toml  package-lock.json  package.json
site/netlify/functions/: admin-auth.ts  admin-telemetry.ts  telemetry-ingest.ts
site/netlify/lib/: ingest.ts
site/public/: install.ps1  install.sh
site/scripts/: deploy-netlify.ps1  process-logo.mjs
site/src/components/: LogoMark.astro  SiteTitle.astro  SocialIcons.astro
site/src/content/docs/: troubleshooting.md
site/src/content/docs/core-concepts/: how-it-works.md  knowledge-graph.md  resolution.md
site/src/content/docs/getting-started/: configuration.md  installation.md  (+4 more)
site/src/lib/: brand.ts  github.ts  version.ts
site/src/pages/: index.astro
site/src/pages/admin/: dashboard.astro  login.astro
site/src/styles/: theme.css
telemetry-worker/: README.md  package-lock.json  package.json  wrangler.jsonc  wrangler.workers-dev.jsonc
telemetry-worker/src/: index.ts
test-smoke/: App.tsx  Dashboard.tsx  Home.tsx  emitter.ts  greet.ts  hello.ts  main.ts  package.json  router.tsx  server.ts  users.controller.ts
test-smoke-go/: go.mod  main.go
test-smoke-rust/: Cargo.toml
test-smoke-rust/fixtures/: actix_routes.rs
test-smoke-rust/src/: main.rs
test-smoke-workspace/crates/alpha/: Cargo.toml
test-smoke-workspace/crates/alpha/src/: lib.rs
test-smoke-workspace/crates/beta/: Cargo.toml
test-smoke-workspace/crates/beta/src/: lib.rs
test-smoke/app/blog/[slug]/: page.tsx
(+9 files in other folders)
