[package]
name = "ax-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ax"
path = "src/main.rs"

[dependencies]
ax-types = { workspace = true }
ax-utils = { workspace = true }
ax-core = { workspace = true }
ax-extraction = { workspace = true }
ax-context = { workspace = true }
ax-sync = { workspace = true }
ax-mcp = { workspace = true }
ax-graph = { workspace = true }
ax-telemetry = { workspace = true }
ax-reasoning = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
owo-colors = { version = "4", features = ["supports-colors"] }
dialoguer = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
dirs = { workspace = true }
self_update = { workspace = true }