[package]
name = "ax-core"
version = "2.0.3"
edition = "2021"

[dependencies]
ax-types = { workspace = true }
ax-utils = { workspace = true }
ax-db = { workspace = true }
ax-extraction = { workspace = true }
ax-resolution = { workspace = true }
ax-graph = { workspace = true }
ax-context = { workspace = true }
ax-sync = { workspace = true }
ax-policy = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }