[package]
name = "ax-db"
version = "0.1.2"
edition = "2021"

[dependencies]
ax-types = { workspace = true }
ax-utils = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }