[package]
name = "ax-reasoning"
version = "2.0.11"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true }
tracing = { workspace = true }

