[package]
name = "ax-resolution"
version = "2.0.1"
edition = "2021"

[dependencies]
ax-types = { workspace = true }
ax-utils = { workspace = true }
ax-db = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lru = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
