[package]
name = "ax-telemetry"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
