[package]
name = "ax-web"
version = "2.0.10"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
include_dir = "0.7"
mime_guess = "2"
ax-policy = { workspace = true }

